--- a/home_user.html
+++ b/home_user.html
@@ -284,7 +284,7 @@
 
 
 
-      axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php', {
+      axios.get('http://localhost/ciclovida/api_php/usuarios.php', {
         params: { id_user }
       })
         .then(response => {
