--- a/home_user.html
+++ b/home_user.html
@@ -170,6 +170,7 @@
                 <th>Responsável</th>
                 <th>Telefone</th>
                 <th>Endereço</th>
+                <th>Ação</th>
 
               </tr>
             </thead>
@@ -330,7 +331,14 @@
             { data: 'nome_ponto' },
             { data: 'responsavel' },
             { data: 'telefone' },
-            { data: 'endereco' }
+            { data: 'endereco' },
+            {
+              data: null,
+              render: function (data, type, row) {
+                return `<button class="btn btn-info btn-sm" onclick="editarColeta(${row.id})">Editar</button>`;
+              }
+            }
+
           ],
           language: {
             url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/pt-BR.json"
@@ -356,18 +364,18 @@
             { data: 'descricao', defaultContent: 'Sem descrição' },
             { data: 'quantidade' },
             {
-  data: null,
-  render: function (data, type, row) {
-    let cor = row.status == 1 ? 'success' : 'warning';
-    let texto = row.status == 1 ? 'Disponível' : 'Indisponível';
+              data: null,
+              render: function (data, type, row) {
+                let cor = row.status == 1 ? 'success' : 'warning';
+                let texto = row.status == 1 ? 'Disponível' : 'Indisponível';
 
-    return `
-      <button class="btn btn-${cor} btn-sm mr-2" onclick="alternarStatus(${row.id}, ${row.status})">${texto}</button>
-      <button class="btn btn-info btn-sm mr-2" onclick="editarProduto(${row.id})">Editar</button>
-      <button class="btn btn-danger btn-sm" onclick="apagarProduto(${row.id})">Apagar</button>
-    `;
-  }
-}
+                return `
+                  <button class="btn btn-${cor} btn-sm mr-2" onclick="alternarStatus(${row.id}, ${row.status})">${texto}</button>
+                  <button class="btn btn-info btn-sm mr-2" onclick="editarProduto(${row.id})">Editar</button>
+                  <button class="btn btn-danger btn-sm" onclick="apagarProduto(${row.id})">Apagar</button>
+                `;
+              }
+            }
           ],
           language: {
             url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/pt-BR.json"
@@ -386,41 +394,46 @@
     }
 
     function apagarProduto(id) {
-  if (confirm('Tem certeza que deseja apagar este produto? Essa ação não poderá ser desfeita.')) {
-    axios.delete(`https://ciclovida.ki6.com.br/ciclovida/api_php/item.php?id=${id}`)
-      .then(response => {
-        alert(response.data.mensagem || 'Produto apagado com sucesso!');
-        location.reload();
-      })
-      .catch(error => {
-        console.error('Erro ao apagar produto:', error);
-        alert('Erro ao tentar apagar o produto. Tente novamente.');
-      });
-  }
-}
+      if (confirm('Tem certeza que deseja apagar este produto? Essa ação não poderá ser desfeita.')) {
+        axios.delete(`https://ciclovida.ki6.com.br/ciclovida/api_php/item.php?id=${id}`)
+          .then(response => {
+            alert(response.data.mensagem || 'Produto apagado com sucesso!');
+            location.reload();
+          })
+          .catch(error => {
+            console.error('Erro ao apagar produto:', error);
+            alert('Erro ao tentar apagar o produto. Tente novamente.');
+          });
+      }
+    }
 
-function alternarStatus(id, statusAtual) {
-  const novoStatus = statusAtual === 1 ? 0 : 1;
-  const confirmacao = confirm("Deseja alterar o status para " + (novoStatus === 1 ? 'Disponível' : 'Indisponível') + "?");
+    function alternarStatus(id, statusAtual) {
+      const novoStatus = statusAtual === 1 ? 0 : 1;
+      const confirmacao = confirm("Deseja alterar o status para " + (novoStatus === 1 ? 'Disponível' : 'Indisponível') + "?");
 
-  if (!confirmacao) return;
+      if (!confirmacao) return;
 
-  axios.patch(`https://ciclovida.ki6.com.br/ciclovida/api_php/item.php?id=${id}&status=${novoStatus}`)
-    .then(response => {
-      alert(response.data.mensagem || 'Status alterado com sucesso!');
-      location.reload();
-    })
-    .catch(error => {
-      console.error('Erro ao alterar status:', error);
-      alert('Erro ao atualizar o status do produto.');
-    });
-}
+      axios.patch(`https://ciclovida.ki6.com.br/ciclovida/api_php/item.php?id=${id}&status=${novoStatus}`)
+        .then(response => {
+          alert(response.data.mensagem || 'Status alterado com sucesso!');
+          location.reload();
+        })
+        .catch(error => {
+          console.error('Erro ao alterar status:', error);
+          alert('Erro ao atualizar o status do produto.');
+        });
+    }
 
-function editarProduto(id) {
-  // Salva o ID no localStorage para a tela de edição usar
-  localStorage.setItem('id_produto_edicao', id);
-  window.location.href = 'editar_produto.html';
-}
+    function editarProduto(id) {
+      // Salva o ID no localStorage para a tela de edição usar
+      localStorage.setItem('id_produto_edicao', id);
+      window.location.href = 'editar_produto.html';
+    }
+    function editarColeta(id) {
+      localStorage.setItem('id_coleta_edicao', id);
+      window.location.href = 'editar_coleta.html';
+    }
+
   </script>
 </body>
 
