--- a/cadastro.html
+++ b/cadastro.html
@@ -231,7 +231,7 @@
         cep
       };
       //axios.post('http://localhost/ciclovida/api_php/usuarios.php', dadosCadastro)
-      axios.post('http://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php', dadosCadastro)
+      axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php', dadosCadastro)
         .then(function (response) {
           alert('Cadastro realizado com sucesso!');
           window.location.href = 'login.html';
