--- a/login.html
+++ b/login.html
@@ -156,7 +156,7 @@
       const documento = document.getElementById('documento').value;
       const senha = document.getElementById('senha').value;
 
-      axios.post('http://ciclovida.ki6.com.br/ciclovida/api_php/login.php', {
+      axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/login.php', {
         documento: documento,
         senha: senha
       })
