header em todas as páginas

--- a/chatbot.html
+++ b/chatbot.html
@@ -74,42 +74,9 @@
 
 <body>
   <div class="hero_area">
-    <!-- Header Section -->
-    <header class="header_section">
-      <div class="header_bottom">
-        <div class="container-fluid">
-          <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href="index.html">
-              <img class="logo" src="images/whitelogo.svg" alt="CicloVida Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Início <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Catálogo</a>
-                </li>
-              </ul>
-              <div class="quote_btn-container">
-                <div id="labelUsuario" class="mr-3"></div>
-                <a href="login.html">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>Entrar</span>
-                </a>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </div>
-    </header>
-    <!-- End Header Section -->
+      <!-- Header section -->
+  <div id="header-placeholder"></div>
+  <!-- end header section -->
 
     <!-- Treatment Section -->
     <section class="treatment_section layout_padding">
@@ -291,5 +258,6 @@
       });
     });
   </script>
+  <script src="js/headerLoader.js" defer></script>  
 </body>
 </html>
