--- a/cadastro_coleta.html
+++ b/cadastro_coleta.html
@@ -35,42 +35,11 @@
 </head>
 
 <body class="sub_page">
-  <header class="header_section">
-    <div class="header_bottom">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
 
+          <!-- Header section -->
+          <div id="header-placeholder"></div>
+          <!-- end header section -->
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Catálogo</a>
-                </li>
-              </ul>
-            </div>
-            <div class="quote_btn-container">
-
-              <div id="labelUsuario"></div>
-              <a href="login.html">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <span>
-                  Entrar
-                </span>
-              </a>
-            </div>
-  </header>
   <section class="book_section layout_padding">
     <div class="container">
       <div class="row">
@@ -185,6 +154,7 @@
         });
     }
   </script>
+  <script src="js/headerLoader.js" defer></script>
 </body>
 
 </html>
