--- a/editar_coleta.html
+++ b/editar_coleta.html
@@ -16,26 +16,9 @@
 
 <body class="sub_page">
 
-  <header class="header_section">
-    <div class="header_bottom">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html"><img src="images/logo2.svg" alt="" height="50"></a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Catálogo</a></li>
-            </ul>
-            <div class="quote_btn-container">
-              <div id="labelUsuario"></div>
-              <a href="login.html"><i class="fa fa-user"></i><span>Entrar</span></a>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </header>
+      <!-- Header section -->
+      <div id="header-placeholder"></div>
+      <!-- end header section -->
 
   <section class="book_section layout_padding">
     <div class="container">
@@ -148,6 +131,7 @@
         });
     }
   </script>
+  <script src="js/headerLoader.js" defer></script>
 </body>
 
 </html>
