--- a/editar_user.html
+++ b/editar_user.html
@@ -46,62 +46,9 @@
 </head>
 
 <body class="sub_page">
-  <header class="header_section">
-    <div class="header_bottom">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img class=logo src="images/whitelogo.svg" alt="">
-          </a>
-          </a>
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Catálogo</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="home_user.html">Perfil</a>
-                </li>
-              </ul>
-            </div>
-            <div class="quote_btn-container">
-              <div id="labelUsuario"></div>
-              <a href="login.html">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <span>
-                  Entrar
-                </span>
-                <button onclick="logout()">Sair</button>
-              </a>
-              <a href="cadastro.html">
-                <i class="fa fa-user" aria-hidden="true"></i>
-                <span>
-                  Cadastrar
-                </span>
-              </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </header>
+          <!-- Header section -->
+          <div id="header-placeholder"></div>
+          <!-- end header section -->
 
 
   <!-- Editar Perfil Section -->
@@ -307,6 +254,7 @@
         });
     }
   </script>
+  <script src="js/headerLoader.js" defer></script>
 </body>
 
 </html>
