--- a/login.html
+++ b/login.html
@@ -61,46 +61,9 @@
   </style>
 </head>
 
-<header class="header_section">
-  <div class="header_bottom">
-    <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand" href="index.html">
-          <img class=logo src="images/whitelogo.svg" alt="">
-        </a>
-        </a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class=""> </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
-            <ul class="navbar-nav  ">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html"> Sobre</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Catálogo</a>
-              </li>
-            </ul>
-          </div>
-          <div class="quote_btn-container">
-            <div id="labelUsuario"></div>
-            <a href="cadastro.html">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span>
-                Cadastrar
-              </span>
-            </a>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </div>
-</header>
+    <!-- Header section -->
+    <div id="header-placeholder"></div>
+    <!-- end header section -->
 
 <body class="sub_page">
 
@@ -176,7 +139,7 @@
       window.location.href = 'login.html';
     }
   </script>
-
+  <script src="js/headerLoader.js" defer></script> 
 </body>
 
 </html>
