ajuste da tela editar pefil

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
                   Davi
                 </h5>
                 <h6>
-                  MBBS
+                  DEV
                 </h6>
                 <div class="social_box">
                   <a href="">
@@ -175,7 +175,7 @@
                   Tiago
                 </h5>
                 <h6>
-                  MBBS
+                  DEV
                 </h6>
                 <div class="social_box">
                   <a href="">
@@ -197,14 +197,14 @@
           <div class="item">
             <div class="box">
               <div class="img-box">
-                <img src="images/team3.jpg" alt="" />
+                <img src="images/adriel.jpg" alt="" />
               </div>
               <div class="detail-box">
                 <h5>
-                  Morco
+                  ADRIEL
                 </h5>
                 <h6>
-                  MBBS
+                  DEV
                 </h6>
                 <div class="social_box">
                   <a href="">
