--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -18,11 +19,13 @@
   <!-- Fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <!-- Owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   <!-- Font Awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Nice select -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
+    integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
   <!-- Datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
   <!-- Custom styles for this template -->
@@ -38,8 +41,8 @@
       right: 20px;
       background-color: #044fa1;
       color: white;
-      border-radius: 50%;
-      width: 60px;
+      border-radius: 18px;
+      width: 125px;
       height: 60px;
       display: flex;
       align-items: center;
@@ -48,15 +51,18 @@
       cursor: pointer;
       z-index: 1000;
     }
+
     .help-btn:hover {
       background-color: #033c7f;
     }
+
     .chat-window {
       max-height: 400px;
       overflow-y: auto;
       background-color: #f8f9fa;
       border-radius: 10px;
     }
+
     .chat-message.user .chat-bubble {
       background-color: #007bff;
       color: white;
@@ -66,6 +72,7 @@
       border-radius: 10px 10px 0 10px;
       margin-bottom: 10px;
     }
+
     .chat-message.bot .chat-bubble {
       background-color: #e9ecef;
       color: black;
@@ -75,24 +82,30 @@
       border-radius: 10px 10px 10px 0;
       margin-bottom: 10px;
     }
+
     .btn-teal {
       background-color: #20c997;
       color: white;
     }
+
     .btn-teal:hover {
       background-color: #17a589;
     }
+
     .rounded-start-pill {
       border-top-left-radius: 50rem;
       border-bottom-left-radius: 50rem;
     }
+
     .rounded-end-pill {
       border-top-right-radius: 50rem;
       border-bottom-right-radius: 50rem;
     }
+
     .modal-content {
       border-radius: 15px;
     }
+
     .modal-header {
       border-bottom: none;
     }
@@ -389,7 +402,7 @@
                 alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
                 there isn't anything
               </p>
-              <a href="">Read More</}}/a>
+              <a href="">Read More</}} /a>
             </div>
           </div>
         </div>
@@ -398,71 +411,8 @@
   </section>
   <!-- End treatment section -->
 
-  <!-- Team section -->
-  <section class="team_section layout_padding">
-    <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Our <span>Doctors</span>
-        </h2>
-      </div>
-      <div class="carousel-wrap">
-        <div class="owl-carousel team_carousel">
-          <div class="item">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/team1.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Hennry</h5>
-                <h6>MBBS</h6>
-                <div class="social_box">
-                  <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/team2.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Jenni</h5>
-                <h6>MBBS</h6>
-                <div class="social_box">
-                  <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/team3.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>Morco</h5>
-                <h6>MBBS</h6>
-                <div class="social_box">
-                  <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
+
   <!-- End team section -->
 
   <!-- Client section -->
@@ -588,10 +538,12 @@
   <!-- Help Button -->
   <div class="help-btn" data-toggle="modal" data-target="#chatModal">
     <i class="fa fa-comment" aria-hidden="true"></i>
+    Assistente IA
   </div>
 
   <!-- Chat Modal -->
-  <div class="modal fade" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="chatModalLabel" aria-hidden="true">
+  <div class="modal fade" id="chatModal" tabindex="-1" role="dialog" aria-labelledby="chatModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -609,14 +561,16 @@
           <div id="chat-window" class="chat-window mb-4 p-3 border rounded"></div>
           <!-- Quick Questions -->
           <div class="quick-questions d-flex flex-wrap justify-content-center mb-3">
-            <button class="btn btn-teal m-2" data-message="Quais são os serviços disponíveis?">Serviços Disponíveis</button>
+            <button class="btn btn-teal m-2" data-message="Quais são os serviços disponíveis?">Serviços
+              Disponíveis</button>
             <button class="btn btn-teal m-2" data-message="Como agendar uma consulta?">Agendar Consulta</button>
             <button class="btn btn-teal m-2" data-message="Informações sobre nefrologia">Nefrologia</button>
             <button class="btn btn-teal m-2" data-message="Suporte técnico">Suporte Técnico</button>
           </div>
           <!-- Chat Input -->
           <form id="chat-form" class="chat-input-group d-flex justify-content-center">
-            <input id="user-input" type="text" class="form-control w-75 rounded-start-pill" placeholder="Pergunte alguma coisa..." aria-label="Mensagem do usuário">
+            <input id="user-input" type="text" class="form-control w-75 rounded-start-pill"
+              placeholder="Pergunte alguma coisa..." aria-label="Mensagem do usuário">
             <button id="send-btn" type="submit" class="btn btn-primary rounded-end-pill">
               <i class="fa fa-paper-plane" aria-hidden="true"></i>
             </button>
@@ -744,4 +698,5 @@
     document.getElementById('displayYear').textContent = new Date().getFullYear();
   </script>
 </body>
+
 </html>
