ajuste no chat ia

--- a/chatbot.html
+++ b/chatbot.html
@@ -154,10 +154,10 @@
 
         <!-- Quick Questions -->
         <div class="quick-questions d-flex flex-wrap justify-content-center mb-3">
-          <button class="btn btn-teal m-2" data-message="Quais são os serviços disponíveis?">Serviços Disponíveis</button>
-          <button class="btn btn-teal m-2" data-message="Como agendar uma consulta?">Agendar Consulta</button>
-          <button class="btn btn-teal m-2" data-message="Informações sobre nefrologia">Nefrologia</button>
-          <button class="btn btn-teal m-2" data-message="Suporte técnico">Suporte Técnico</button>
+          <button class="btn btn-teal m-2" data-message="Integração logística">Integração logística</button>
+          <button class="btn btn-teal m-2" data-message="Doação segura">Doação segura</button>
+          <button class="btn btn-teal m-2" data-message="Destinação correta">Destinação correta</button>
+          <button class="btn btn-teal m-2" data-message="Engajamento comunitário">Engajamento comunitário</button>
         </div>
 
         <!-- Chat Input -->
