--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Davi
+                  DAVI
                 </h5>
                 <h6>
                   DEV
@@ -120,10 +120,39 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Tiago
+                  TIAGO
                 </h5>
                 <h6>
                   DEV
+                </h6>
+                <div class="social_box">
+                  <a href="">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/hugo.jpg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>
+                  HUGO
+                </h5>
+                <h6>
+                  ANALISTA
                 </h6>
                 <div class="social_box">
                   <a href="">
